<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false" tools:ignore="PrivateResource">AirUz</string>
    <string name="error">Ошибка</string>
    <string name="again">Очередной раз</string>
    <string name="settings">Настройки</string>
    <string name="exception">Исключение</string>
    <string name="ok">OK</string>
    <string name="info">Внимание!</string>
    <string name="on_location">Что бы продолжить включите геолокацию на телефоне</string>
    <string name="no_location">Нет, спасибо</string>
    <string name="title">Мониторинг загрязнения окружающей природной среды Республики Узбекистан</string>
    <string name="air">Воздух</string>
    <string name="soil">Мониторинг загрязнения почв</string>
    <string name="water">Мониторинг загрязнения поверхностных вод</string>
    <string name="contact">Контакты</string>
    <string name="share">Поделиться</string>
    <string name="language">Язык</string>
    <string name="point">Ближайший пункт</string>
    <string name="on_loc">Включить геолокацию и найти ближайший пост</string>
    <string name="all_items">Все пункты</string>
    <string name="area">Области</string>
    <string name="network_error">Сетевая ошибка</string>
    <string name="weather">Погода</string>
    <string name="ci">ИЗА:</string>
    <string name="recommended">Рекомендуемые меры предосторожности\nв зависимости от ИЗА:</string>
    <string name="refresh">Обновлено:</string>
    <string name="map">На карте\t\t</string>
    <string name="table_si">Динамика изменения ИЗА</string>
    <string name="date">Дата:</string>
    <string name="si">ИЗА:</string>
    <string name="use_info">Полезная информация</string>
    <string name="criteria">Общая информация</string>
    <string name="criteria_one">Класс качества воды/ Величина ИЗВ</string>
    <string name="criteria_two">Информация по возможности использования воды</string>
    <string name="N">№</string>
    <string name="water_object">Водный объект</string>
    <string name="point_target">Пункт, створ наблюдений</string>
    <string name="izv">ИЗВ</string>
    <string name="quality_water">Качество воды</string>
    <string name="filter">Фильтр</string>
    <string name="water_criteria">Критерии загрязненности вод по ИЗА и критерии улучшения (ухудшения) качества вод</string>
    <string name="water_criteria_one">Качество воды</string>
    <string name="water_criteria_two">Величина ИЗА</string>
    <string name="month_1">Январь</string>
    <string name="month_2">Февраль</string>
    <string name="month_4">апрель</string>
    <string name="month_3">марш</string>
    <string name="month_5">май</string>
    <string name="month_6">июнь</string>
    <string name="month_7">июль</string>
    <string name="month_8">август</string>
    <string name="month_9">сентябрь</string>
    <string name="month_10">октябрь</string>
    <string name="month_11">ноябрь</string>
    <string name="month_12">декабрь</string>
    <string name="address">Адрес:</string>
    <string name="phone">Телефон:</string>
    <string name="email">E-mail:</string>
    <string name="rus">Русский</string>
    <string name="russian">Русский</string>
    <string name="uzb">Узбекский</string>
    <string name="uzbek">Узбекский</string>
    <string name="eng">Английский</string>
    <string name="english">Английский</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZmxpb3NhbiIsImEiOiJja2Y5NmpicmYwajM1MnNwcG0zODk1OGtrIn0.uWaNunKMZKL_NCqz28XSSQ</string>
    <string name="map_info">Наблюдение за состоянием атмосферного воздуха ведутся на 63 стационарных пунктах наблюдения. Наблюдения проводятся ежедневно с периодичностью 3 раза в стуки (7:00; 13:00; 19:00 по местному времени)</string>
    <string name="map_info_subtitle">Стандартный индекс (ИЗА)</string>
    <string name="info_map">Инфо карта</string>
    <string name="empty">Информации не найдено!</string>
    <string name="call">Вызов</string>
    <string name="to_map">Интерактивная карта</string>
    <string name="more">Батафсил маълумот</string>
    <string name="middle">Среднесуточные концентрации загрязнителей (мг/м<sup>3</sup>)</string>
    <string name="subtitle">Приложение создано при содействии фонда Zamin в рамках проекта \"Автоматизация мониторинга загрязнения атмосферного воздуха\"</string>
    <string name="connect">Связаться с нами</string>
    <string name="hint_fio">Ф.И.О.*</string>
    <string name="hint_email">Эл. адрес*</string>
    <string name="hint_info">Сообщение*</string>
    <string name="send">Отправить</string>
    <string name="update_date">Обновление данных</string>
    <string name="iza">ИЗА</string>
    <string name="titlenew">Примесь</string>
    <string name="valeu_1">максимально-разовая (ПДКм.р.)</string>
    <string name="valeu_2">среднесуточная (ПДКс.с.)</string>
    <string name="value_3"> среднегодовая (ПДКс.г.)</string>
    <string name="main">Основные загрязняющие вещества</string>
    <string name="sp">Специфические загрязняющие вещества</string>
    <string name="about_one">Уровень загрязнения/Значение ИЗА</string>
    <string name="about_two">Рекомендуемые меры предосторожности</string>
    <string name="text_new">Критерии загрязненности вод по ИЗВ и критерии улучшения (ухудшения) качества вод</string>
    <string name="text_count">Обновление данных</string>
    <string name="new_lor">Значения ПДК, мг/м<sup>3</sup></string>
    <string name="new_subtitle_lor">Предельно допустимые концентрации загрязняющих веществ</string>
    <string name="on_boarding">Мониторинг загрязнения окружающей природной среды Республики Узбекистан</string>
</resources>