<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        app:layout_constraintDimensionRatio="1:0.9"
        android:layout_height="0dp"
        android:src="@drawable/splash"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/iv_splash"
        />

    <TextView
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        android:id="@+id/tv_title"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/iv_splash"
        style="@style/DefaultTextView" />

    <TextView
        android:text="@string/on_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:id="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        style="@style/DefaultTextView" />

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/ok"
        android:id="@+id/bt_ok"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/bt_no_location"
        style="@style/DefaultButton" />

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no_location"
        android:id="@+id/bt_no_location"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/DefaultButton" />

</androidx.constraintlayout.widget.ConstraintLayout>