<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                style="@style/DefaultTextView"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/connect"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/hint_fio"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/hint_email"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:id="@+id/et_info"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top"
                android:hint="@string/hint_info"
                android:maxLines="5"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/bt_send"
        style="@style/DefaultButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

