<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="3"
            android:id="@+id/rv_menu"
            tools:listitem="@layout/item_menu"
            />

        <TextView
            android:id="@+id/layout_contact"
            style="@style/DefaultTextView"
            android:layout_width="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/contact"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textSize="17sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/layout_share"
            style="@style/DefaultTextView"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/share"
            android:textSize="17sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/layout_language"
            style="@style/DefaultTextView"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/language"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/layout_connect"
            style="@style/DefaultTextView"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/connect"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>