<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/colorPrimary"
        />

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/card"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_title"
                style="@style/DefaultTextView"
                android:layout_width="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/water"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_month"
                style="@style/DefaultTextView"
                android:layout_width="128dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_text_background"
                android:drawableEnd="@drawable/ic_arrow"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/colorSpinnerText"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:ignore="UseCompatTextViewDrawableXml"
                tools:text="Январь" />

            <TextView
                android:id="@+id/tv_year"
                style="@style/DefaultTextView"
                android:layout_width="96dp"
                android:layout_height="32dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/spinner_text_background"
                android:drawableEnd="@drawable/ic_arrow"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/colorSpinnerText"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_month"
                app:layout_constraintStart_toEndOf="@id/tv_month"
                tools:ignore="UseCompatTextViewDrawableXml"
                tools:text="2020" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/criteria_layout_background"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_month">

                <TextView
                    style="@style/DefaultTextView"
                    android:layout_width="16dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/N"
                    android:textSize="12sp" />

                <TextView
                    style="@style/DefaultTextView"
                    android:layout_width="54dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/water_object"
                    android:textSize="12sp" />

                <TextView
                    style="@style/DefaultTextView"
                    android:layout_width="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/point_target"
                    android:textSize="12sp" />

                <TextView
                    style="@style/DefaultTextView"
                    android:layout_width="28dp"
                    android:layout_marginEnd="12dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/izv"
                    android:textSize="12sp" />

                <TextView
                    style="@style/DefaultTextView"
                    android:layout_width="60dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/quality_water"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_criteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout"
                tools:itemCount="8"
                tools:listitem="@layout/item_news_letter" />

            <TextView
                android:id="@+id/tv_empty"
                style="@style/DefaultTextView"
                android:layout_marginTop="32dp"
                android:text="@string/empty"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

