<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                style="@style/DefaultTextView"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                tools:text="@tools:sample/lorem" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <WebView
                        android:id="@+id/tv_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:ignore="WebViewLayout" />

                    <TextView
                        android:id="@+id/tv_title_new"
                        style="@style/DefaultTextView"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="16sp"
                        tools:text="@string/new_lor" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/recommendations_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/criteria_layout_background"
                        android:gravity="center_vertical"
                        android:paddingStart="9dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="9dp"
                        android:paddingBottom="12dp"
                        android:visibility="visible">

                        <TextView
                            style="@style/DefaultTextView"
                            android:layout_width="112dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/about_one"
                            android:textSize="13sp" />

                        <TextView
                            style="@style/DefaultTextView"
                            android:layout_width="match_parent"
                            android:layout_marginStart="24dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/about_two"
                            android:textSize="13sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <TextView
                        android:id="@+id/tv_subtitle_new"
                        style="@style/DefaultTextView"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="16sp"
                        android:text="@string/new_subtitle_lor" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:visibility="gone"
                        tools:itemCount="6"
                        tools:listitem="@layout/item_about" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/population_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/criteria_layout_background"
                        android:gravity="center_vertical"
                        android:paddingStart="9dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="9dp"
                        android:paddingBottom="12dp"
                        android:visibility="visible">

                        <TextView
                            style="@style/DefaultTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/titlenew"
                            android:textSize="11sp" />

                        <TextView
                            style="@style/DefaultTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/valeu_1"
                            android:textSize="11sp" />

                        <TextView
                            style="@style/DefaultTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/valeu_2"
                            android:textSize="11sp" />

                        <TextView
                            style="@style/DefaultTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/value_3"
                            android:textSize="11sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/population_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/criteria_background"
                        android:gravity="center_vertical"
                        android:paddingStart="9dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="9dp"
                        android:paddingBottom="12dp"
                        android:visibility="visible">

                        <TextView
                            style="@style/DefaultTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="center"
                            android:text="@string/main"
                            android:textSize="13sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:visibility="visible"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_population" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/population_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/criteria_background"
                        android:gravity="center_vertical"
                        android:paddingStart="9dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="9dp"
                        android:paddingBottom="12dp"
                        android:visibility="visible">

                        <TextView
                            style="@style/DefaultTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="center"
                            android:text="@string/sp"
                            android:textSize="13sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:visibility="visible"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_population" />


                    <WebView
                        android:id="@+id/tv_body_new"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:ignore="WebViewLayout" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </ScrollView>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

